--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+slindak (0.1.4) unstable; urgency=low
+
+  * New version.
+  * Fix cleanup for source packages: do not remove tarballs which are in use.
+
+ -- Alexander Shishkin <virtuoso@slind.org>  Tue, 29 Jan 2008 19:22:04 +0300
+
 slindak (0.1.3) unstable; urgency=low
 
   * New version.
