--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+slindak (0.1.6) unstable; urgency=low
+
+  * New version.
+
+  [ Alexander Shishkin ]
+  * version bump
+  * add rm_rf() implementation from grasp
+  * move common things to library constructor
+  * added stubs for testing framework
+  * slindak: do not bail on unspecified query format
+  * slindweb: don't reinitialize output
+  * testsuite: use /dev/null as commands' stderr/stdout
+  * add dpkg_source() and dpkg_deb() implementations
+  * simple yet functional framework for regression testing
+  * slindak: add list query functionality
+
+ -- Alexander Shishkin <virtuoso@slind.org>  Tue, 19 Feb 2008 13:40:47 +0300
+
 slindak (0.1.5) unstable; urgency=low
 
   * New version. 
