--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+slindak (0.1.10) unstable; urgency=low
+
+  * New version.
+  [ Alexander Shishkin ]
+  * add more generic parser for control files
+
+ -- Alexander Shishkin <virtuoso@slind.org>  Mon, 31 Mar 2008 20:47:31 +0400
+
 slindak (0.1.9) unstable; urgency=low
 
   * New version.
