--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+slindak (0.1.11.oi2) unstable; urgency=low
+
+  * Forced chmod invocation in mkdir_p was removed.
+
+ -- Yauhen Kharuzhy <jekhor@gmail.com>  Sat, 24 May 2008 19:49:03 +0300
+
 slindak (0.1.11.oi1) unstable; urgency=low
 
   * Missing debhelper build dependency added.
