--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+slindak (0.1.12) unstable; urgency=low
+
+  * New version.
+
+  [ Mikhail Gusarov ]
+  * Missing pkg-config build-dependency added.
+  * debhelper build-dependency added
+
+  [ Alexander Shishkin ]
+  * be slightly more verbose in testcases
+
+ -- Alexander Shishkin <virtuoso@slind.org>  Thu, 21 Aug 2008 10:44:21 +0300
+
 slindak (0.1.11) unstable; urgency=low
 
   * New version.
