--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+slindak (0.1.12.oi3) unstable; urgency=low
+
+  * apt-utils build-dependency added: required to detect apt-ftparchive
+    location during configure.
+  * Increased verbosity of spawn() function.
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Wed, 10 Sep 2008 03:18:49 +0700
+
 slindak (0.1.12.oi2) unstable; urgency=low
 
   * spawn() fixed on x86-64
